--- a/homepage.html
+++ b/homepage.html
@@ -70,8 +70,8 @@
             </div>
         </div>
         <div class="slider-controls">
-            <button class="slider-btn" id="prevBtn">← Zurück</button>
-            <button class="slider-btn" id="nextBtn">Weiter →</button>
+            <button class="slider-btn" id="prevBtn">←</button>
+            <button class="slider-btn" id="nextBtn">→</button>
         </div>
         <div class="slider-dots" id="sliderDots"></div>
     </section>
@@ -89,9 +89,6 @@
                 <div class="review-card">
                     <span class="placeholder-text">Rezension 3</span>
                 </div>
-            </div>
-            <div class="reviews-title">
-                <h2>Website Rezensionen</h2>
             </div>
         </div>
     </section>
