--- a/backend/index.html
+++ b/backend/index.html
@@ -10,7 +10,7 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <a href="" class="logo">
+    <a href="/" class="logo">
       <img
         class="logo-img"
         src="Wander-weg-logo.svg"
