implemented indes.html file

--- a/backend/index.html
+++ b/backend/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WanderWege</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <a href="/" class="logo">
       <img
         class="logo-img"
-        src="Wander-weg-logo.svg"
+        src="/images/Wander-weg-logo.svg"
         alt="WanderWege Logo"
       />
     </a>
@@ -23,7 +23,9 @@
     </nav>
 
     <div class="account">
-      <span>Account</span>
+      <span>
+        <a href="/profile">Account</a>
+      </span>
       <div class="account-avatar"></div>
     </div>
   </header>
@@ -31,7 +33,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-image">
-      <img src="hero-img-test.jpeg">
+      <img src="/images/hero-img-test.jpeg">
     </div>
   </section>
 
@@ -42,7 +44,7 @@
       <div class="routes-slider" id="routesSlider">
         <article class="route-card">
           <div class="route-image">
-            <img class="route-1-image" src="route_1.jpg">
+            <img class="route-1-image" src="/images/route_1.jpg">
             <span class="placeholder-text">Preview Image</span>
           </div>
           <h3 class="route-title">Route 1</h3>
